ajout playbook debupdate

--- a/.ansible/roles/sites.yml
+++ b/.ansible/roles/sites.yml
@@ -5,3 +5,6 @@ roles:
   - { role: "fl.ntp" }
   - { role: "fl.debupdate" }
   - { role: "fl.sshkey" }
+  - { role: "fab.debupdate" }
+  - { role: "fab.debsources" }
+
