--- a/.ansible/roles/fl.debupdate/tasks/main.yml
+++ b/.ansible/roles/fl.debupdate/tasks/main.yml
@@ -4,6 +4,6 @@
   - name: APT UPDATE
     become: true
     environment:
-      http_proxy: http://192.168.4.60:3128/
+      http_proxy: http://proxy.fab.local:3128/
     apt:
       update_cache: yes
