--- a/.ansible/roles/fl.ntp/tasks/set_ntp_date.yml
+++ b/.ansible/roles/fl.ntp/tasks/set_ntp_date.yml
@@ -11,11 +11,9 @@
       command: /etc/init.d/ntp stop
       when: (ansible_distribution == "Debian" and ansible_distribution_major_version == "7")
 
-
-
     - name: Get Date
       become: yes
-      command: ntpdate 192.168.1.250
+      command: ntpdate "{{ ntpserver }}"
 
     - name: config
       become: yes
