--- a/.ansible/roles/fl.ntp/tasks/main.yml
+++ b/.ansible/roles/fl.ntp/tasks/main.yml
@@ -1,8 +1,7 @@
 ---
 # tasks file for fl.ntp
 
-# roles/example/tasks/main.yml
   - import_tasks: install_ntp_packages.yml
-    when: ansible_os_platform|lower == 'debian'
+    when: (ansible_os_family|lower == "debian")
   - import_tasks: set_ntp_date.yml
-    when: ansible_os_platform|lower == 'debian'
+    when: ansible_os_family|lower == 'debian'
