Ajout nouveaux roles

--- a/.ansible/roles/sites.yml
+++ b/.ansible/roles/sites.yml
@@ -7,4 +7,6 @@ roles:
   - { role: "fl.sshkey" }
   - { role: "fab.debupdate" }
   - { role: "fab.debsources" }
+  - { role: "fab.debcommon" }
+  - { role: "fab.confntp" }
 
