--- a/.ansible/roles/fab.debcommon/tasks/common.debian.9.yml
+++ b/.ansible/roles/fab.debcommon/tasks/common.debian.9.yml
@@ -13,3 +13,5 @@
         - ntpdate
         - python
         - python-simplejson
+        - apt-transport-https
+        - software-properties-common
